--- a/index.html
+++ b/index.html
@@ -1,121 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link type="text/css" rel="stylesheet"href="style.css"/>
-	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-	<title>Galen Hare's Resume</title>
-</head>
-<body>
-	<div class="grid">
-		<section class="AHeader"><!--top row begin-->
-			<div class="BHeader"><!--Header start-->
-				<h1 id="Name">Galen Hare</h1><br>
-				<h1 id="Position">Computer Systems Engineer</h1>
-			</div><!--Header end-->
-		</section><!--top row end-->
-		<section class="bulk"><!--2nd row start-->
-			<div class="left"> <!--left column begin-->
-				<div><img src="https://media.giphy.com/media/zOvBKUUEERdNm/giphy.gif" alt="profile picture" class="profilepicture"></div><!--avatar-->
-				<h3 id="Contact">Contact</h3>
-				<div class="contact-info"><!--Contact info on left side begin-->
-					<div class="contact-item"><!--Telephone-->
-						 <svg  class="icon" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1600 1240q0 27-10 70.5t-21 68.5q-21 50-122 106-94 51-186 51-27 0-53-3.5t-57.5-12.5-47-14.5-55.5-20.5-49-18q-98-35-175-83-127-79-264-216t-216-264q-48-77-83-175-3-9-18-49t-20.5-55.5-14.5-47-12.5-57.5-3.5-53q0-92 51-186 56-101 106-122 25-11 68.5-21t70.5-10q14 0 21 3 18 6 53 76 11 19 30 54t35 63.5 31 53.5q3 4 17.5 25t21.5 35.5 7 28.5q0 20-28.5 50t-62 55-62 53-28.5 46q0 9 5 22.5t8.5 20.5 14 24 11.5 19q76 137 174 235t235 174q2 1 19 11.5t24 14 20.5 8.5 22.5 5q18 0 46-28.5t53-62 55-62 50-28.5q14 0 28.5 7t35.5 21.5 25 17.5q25 15 53.5 31t63.5 35 54 30q70 35 76 53 3 7 3 21z"/></svg>
-						<a href="tel:911">876-856-5311</a>
-					</div>
-					<div class="contact-item"><!--Email-->
-						<svg class="icon" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1664 1504v-768q-32 36-69 66-268 206-426 338-51 43-83 67t-86.5 48.5-102.5 24.5h-2q-48 0-102.5-24.5t-86.5-48.5-83-67q-158-132-426-338-37-30-69-66v768q0 13 9.5 22.5t22.5 9.5h1472q13 0 22.5-9.5t9.5-22.5zm0-1051v-24.5l-.5-13-3-12.5-5.5-9-9-7.5-14-2.5h-1472q-13 0-22.5 9.5t-9.5 22.5q0 168 147 284 193 152 401 317 6 5 35 29.5t46 37.5 44.5 31.5 50.5 27.5 43 9h2q20 0 43-9t50.5-27.5 44.5-31.5 46-37.5 35-29.5q208-165 401-317 54-43 100.5-115.5t46.5-131.5zm128-37v1088q0 66-47 113t-113 47h-1472q-66 0-113-47t-47-113v-1088q0-66 47-113t113-47h1472q66 0 113 47t47 113z"/></svg>
-						<a href="mailto:galenhare@hotmail.com">galenhare@gmail.com</a>
-					</div>
-					<div class="contact-item"><!--Website-->
-						<svg class="icon" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1520 1216q0-40-28-68l-208-208q-28-28-68-28-42 0-72 32 3 3 19 18.5t21.5 21.5 15 19 13 25.5 3.5 27.5q0 40-28 68t-68 28q-15 0-27.5-3.5t-25.5-13-19-15-21.5-21.5-18.5-19q-33 31-33 73 0 40 28 68l206 207q27 27 68 27 40 0 68-26l147-146q28-28 28-67zm-703-705q0-40-28-68l-206-207q-28-28-68-28-39 0-68 27l-147 146q-28 28-28 67 0 40 28 68l208 208q27 27 68 27 42 0 72-31-3-3-19-18.5t-21.5-21.5-15-19-13-25.5-3.5-27.5q0-40 28-68t68-28q15 0 27.5 3.5t25.5 13 19 15 21.5 21.5 18.5 19q33-31 33-73zm895 705q0 120-85 203l-147 146q-83 83-203 83-121 0-204-85l-206-207q-83-83-83-203 0-123 88-209l-88-88q-86 88-208 88-120 0-204-84l-208-208q-84-84-84-204t85-203l147-146q83-83 203-83 121 0 204 85l206 207q83 83 83 203 0 123-88 209l88 88q86-88 208-88 120 0 204 84l208 208q84 84 84 204z"/></svg>
-						<a href="https://www.google.com.jm">galenhare.com</a>
-					</div> 
-				</div><!--Contact Info on left side end-->
-				<div>
-					<h3>Social Media</h3>
-					<ul>
-						<li><a href="https://www.facebook.com/">Facebook</a></li>
-						<li><a href="https://www.twitter.com/">Twitter</a></li>
-						<li><a href="https://www.instagram.com/">instagram</a></li>
-					</ul>
-			</div>		
+<!--
+original lab idea and code by Kevin Wallace and Jeff Prouty; revised by Brian Le, Victoria Kirst, and Marty Stepp
+http://www.webstepbook.com/
+You should download this file for your lab, but you should not edit its contents.
+--><head>
+		<meta charset="utf-8">
+		<title>Maze!</title>
+		<link href="maze.css" type="text/css" rel="stylesheet">
+		<script src="maze.js" type="text/javascript"></script>
+	</head>
+
+	<body>
+		<h1>The Amazing Mouse Maze!</h1>
+		<h2 id="status">Move your mouse over the "S" to begin.</h2>
+
+		<!-- This part of the page represents the maze -->
+		<div id="maze">
+			<div id="start">S</div>
+			<div class="boundary" id="boundary1"></div>
+			<div class="boundary"></div>
+			<div class="boundary"></div>
+			<div class="boundary"></div>
+			<div class="boundary"></div>
+			<div id="end">E</div>
 		</div>
-		<div class="right-column"><!--right column begin-->
-			<div class="Biography">
-				<h2>Biography</h2>
-				<p>An ambitious and hard-working individual whose goal is to gain hands-on experience in the field of Electronics Engineering, particularly Computer Systems Engineering. A quick learner with an open-minded approach to learning and applying new knowledge. A strong team player, communicator, leader, problem-solver, organizer and decision maker who gives complete dedication to tasks assigned and will contribute positively to the creation of solutions for challenges. I hope to further engineering's position at the forefront of Science and Technology. I believe that engineering contains some of the brightest and most hard working individuals at the UWI.</p>
-			</div>
-			<div class="Work-Experience">
-				<h2>Work Experience</h2>
-				<div class="job">
-					<div class="job-title">
-						<div>
-							<h3>Sept. 2017 - Present</h3>
-						</div>
-						<div>
-							<h3>UWI Student(Computer Systems Engineer)</h3>
-						</div>
-					</div>
-					<p>
-						Currently surviving as one of the UWI's last remaining Computer Systems Engineers. Staying abreast of assignments and tests.  
-					</p>
-				</div>	
-				<div class="job">
-					<div class="job-title">
-						<div>
-							<h3>June 2016 - Sept. 2016</h3>
-						</div>
-						<div>
-							<h3>Excel Technician</h3>
-						</div>
-					</div>
-					<p>
-							Used expertise in excel to aid in the creation of high level spreadsheets for the PIOJ. 
-					</p>
-				</div>
-			</div>	
-			<div class="Education">
-				<h2>Education</h2>
-				<div class="job">
-					<div class="job-title">
-						<div>
-							<h3>Sept. 2017 - Present</h3>
-						</div>
-						<div>
-							<h3>Bsc. Computer Systems Engineering</h3>
-						</div>
-					</div>
-					<p>
-							Pursuing a Bachelor's Degree in Computer Systems Engineering from the UWI Faculty of Engineering
-					</p>
-				</div>	
-				<div class="job">
-					<div class="job-title">
-						<div>
-							<h3>Sept. 2012 -  May 2016</h3>
-						</div>
-						<div>
-							<h3>Wolmer's High School for Boys</h3>
-						</div>
-					</div>
-					<p>
-							Survived and thrived at the Wolmer's High School for Boys. Garnering many A badges, a Senior Prefect Position and a Certificate of completion for CSEC and CAPE units 1&2
-					</p>
-				</div>
-			</div>
-			<div class="Skills">
-				<h2>Skills/Expertise</h2>
-				<ul>
-					<li>HTML</li>
-					<li>CSS</li>
-					<li>Java</li>
-					<li>Python</li>
-					<li>C</li>
-					<li>Atmel Assembly</li>
-				</ul>
-			</div>		
-		</div><!--right column end-->
-		</section>
-	</div>
-</body>
+
+		<p>
+			The object of this game is to guide the mouse cursor through the start area and get to the end area.  Be sure to avoid the walls:
+		</p>
+
+		<div class="boundary example"></div>
+
+		<p>
+			Good luck!
+		</p>
+
+
+	</body>
 </html>
